# testing-django-keycloak

./: .env.example  .gitignore  Makefile  README.md  manage.py  pyproject.toml  test.http
src/api/: urls.py  views.py
src/base/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: asgi.py  settings.py  wsgi.py
src/users/: admin.py  keycloak.py  managers.py  models.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_date_joined.py  0003_alter_customuser_email_alter_customuser_is_active_and_more.py
