[tool.poetry]
name = "core"
version = "0.1.0"
description = "Django project"
authors = ["code406 <davidpm99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
